Fix Banner, css, Text & Image Alignment in people, and footer.

--- a/css/main.css
+++ b/css/main.css
@@ -58,7 +58,7 @@ li{padding-left: 20px}
 #header{position:relative;}
 #sitetitle{float:left;margin:30px 0 10px 30px;}
 #sitetitle h1 {font-size:40px;color:#777;margin:0;padding:0;}
-#header-image{height:300px;margin:0;padding:0;}
+#header-image{margin:0;padding:0;}
 #content{padding:15px 30px;background-color:#fafafa;}
 #extended{padding:15px 30px;background-color:#fff;}
 #extended a{text-decoration:underline;}
@@ -127,6 +127,7 @@ img.alignleft,img.aligncenter,img.alignright{background:#fff;padding:4px;margin-
  Free to use and abuse under the MIT license.
  http://www.opensource.org/licenses/mit-license.php
  */
+/*
 .nivoSlider{position:relative;}
 .nivoSlider img{position:absolute;top:0;left:0;}
 .nivoSlider a.nivo-imageLink{position:absolute;top:0;left:0;width:100%;height:100%;border:0;padding:0;margin:0;z-index:6;display:none;}
@@ -141,6 +142,7 @@ img.alignleft,img.aligncenter,img.alignright{background:#fff;padding:4px;margin-
 .nivo-nextNav{right:0;}
 .nivo-controlNav a{position:relative;z-index:9;cursor:pointer;}
 .nivo-controlNav a.active{font-weight:700;}
+*/
 
 /*
 Skin Name: Nivo Slider Default Theme (modified)
@@ -151,10 +153,11 @@ Version: 1.2
 Author: Gilbert Pellegrom (modified by Andreas Viklund)
 Author URI: http://dev7studios.com
 */
+/*
 .slider-wrapper .nivoSlider{position:relative;height:300px;background:#fafafa url(images/loading.gif) no-repeat 50% 50%;margin-bottom:55px;}
 .slider-wrapper .nivoSlider img{position:absolute;top:0;left:0;display:none;}
 .slider-wrapper .nivoSlider a{border:0;display:block;}
-.slider-wrapper .nivo-controlNav{position:absolute;left:50%;bottom:-41px;margin-left:-60px;/* Tweak this to center bullets */}
+.slider-wrapper .nivo-controlNav{position:absolute;left:50%;bottom:-41px;margin-left:-60px;}
 .slider-wrapper .nivo-controlNav a{display:block;width:22px;height:22px;background:url(images/bullets.png) no-repeat;text-indent:-9999px;border:0;margin-right:3px;float:left;}
 .slider-wrapper .nivo-controlNav a.active{background-position:0 -22px;}
 .slider-wrapper .nivo-directionNav a{display:block;width:30px;height:30px;background:url(images/arrows.png) no-repeat;text-indent:-9999px;border:0;}
@@ -163,6 +166,7 @@ Author URI: http://dev7studios.com
 .slider-wrapper .nivo-caption{font-family:'Droid Sans',Helvetica,Arial,sans-serif;background:rgba(0, 0, 0, 0.2);text-align:center;text-shadow:0 0 4px #111;}
 .slider-wrapper .nivo-caption a{color:#fff;border-bottom:1px dotted #fff;}
 .slider-wrapper .nivo-caption a:hover{color:#fff;}
+*/
 
 /* Mobile styles */
 #wrappermobile {width:100%; margin:0px auto;}
